# anki-image-search

./: .gitignore  BUILD.md  CLAUDE.md  QUICKSTART.md  README.md  USAGE.md  debug_google_response.html  debug_google_search.py  pyproject.toml  ruff.toml  test_image_search.py
.claude/: settings.local.json
src/: __init__.py  babel.cfg  ffmpeg_utils.py  hooks.py  image_search.py  meta.json  state.py  translator.py
src/config/: __init__.py  config.py  constants.py  enums.py  languages.py  types.py
src/locales/: messages.pot
src/locales/en_US/LC_MESSAGES/: messages.po
src/locales/zh_CN/LC_MESSAGES/: messages.po
src/ui/: browser_picker.py  image_picker.py
src/ui/config/: __init__.py  dialog.py  general.py  templates.py
