# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-image-search"
version = "1.0.0"
description = "An Anki plugin that searches Google Images and inserts selected images into note fields."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"src" = [
    "locales/*.pot",
    "locales/*_*/LC_MESSAGES/*",
    "babel.cfg",
]

[dependency-groups]
dev = ["aqt>=25.7.2", "babel>=2.17.0", "beautifulsoup4>=4.12.0", "requests>=2.31.0"]

[tool.pyright]
include = ["src"]
exclude = ["**/vendor"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
ignore = ["E402"]
